hooking up purchase search on the feed.

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -198,9 +198,9 @@
        
        <%=link_to  '&times;',
             'javascript:void(0)',
-            :id    => 'purchase_search_close',
+            :id    => 'purchase_search_cross',
             :class => 'close absolute',
-            :style => 'display: block;'%>
+            :style => 'display: none;'%>
 
       <input type="text" 
         id="purchase_search_data"
