separate elements for purchases search and feed.

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -210,8 +210,11 @@
   <%end%>
 
 	
-	<div id="feed" class="feed cols-2 relative">
+	<div id="feed" class="feed relative">
 	</div> 
+
+  <div id="purchases" class="feed relative" style="display:none">
+  </div>
 	
 	<div id="feed-spinner" class="feed-loading dark">
 	</div> 
