purchases unapproved styled with new item

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -61,7 +61,7 @@
 
 <div class="feed-grid-container border-box rounded-8-bottom" style="padding-bottom: 28px;">
 
-	<div id="feed" class="feed grid no-user-photo no-user-name no-user-bought-pronoun actions link-disabled rounded-8-bottom">
+	<div id="feed" class="feed small no-user no-links grid rounded-8-bottom">
   </div>
   
   <div id="central_message"
