--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -834,11 +834,17 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 /* Item (Medium)
 ==================================================================== */
 
-.item.medium { width: 250px; display: inline-block; padding: 20px 10px 0; }
+.item.medium,
+.medium .item { width: 250px; display: inline-block; padding: 20px 10px 0; }
 .medium .photo-box { height: 250px; line-height: 250px; }
 .medium .photo-box .item-photo { max-height: 250px; }
 .medium .actions .btn { width: 48px; }
-.medium .details-box { margin-top: 14px; min-height: 65px; padding: 0 0 12px 50px; font-size: 12px;  }
+.medium .details-box { 
+	margin-top: 14px; 
+	min-height: 65px; 
+	padding: 0 0 12px 50px; 
+	font-size: 12px; 
+	border-bottom: 6px solid #eee; }
 .medium .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
 .medium .details-box .item-name  { font-size: 12px; }
 .medium .interactions-box { display: none; }
@@ -847,11 +853,16 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 /* Item (Small)
 ==================================================================== */
 
-.item.small { width: 200px; display: inline-block; padding: 20px 10px 0; }
+.item.small,
+.small .item { width: 200px; display: inline-block; padding: 20px 10px 0; }
 .small .photo-box { height: 200px; line-height: 200px; }
 .small .photo-box .item-photo { max-height: 200px; }
 .small .actions .btn { width: 48px; }
-.small .details-box { margin-top: 14px; padding: 0 0 12px 50px; font-size: 12px;  }
+.small .details-box { 
+	margin-top: 14px; 
+	padding: 0 0 12px 50px; 
+	font-size: 12px; 
+	border-bottom: 6px solid #eee; }
 .small .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
 .small .details-box .item-name  { font-size: 12px; }
 .small .interactions-box { display: none; }
@@ -860,15 +871,20 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 /* Item (No User)
 ==================================================================== */
 
-.no-user .details-box { padding-left: 0;  }
+.no-user .details-box { padding-left: 0; min-height: 0; }
 .no-user .details-box .user-photo,
 .no-user .details-box .user-name,
 .no-user .details-box .time  { display: none; }
 
 
+/* Item (No Links)
+==================================================================== */
+.no-links a { cursor: default; }
+
+
 /* Item (No Close)
 ==================================================================== */
-.no-close .close {display :none}
+.no-close .close { display :none }
 
 
 /* Item Modal
