--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -438,7 +438,10 @@ ul.notifications li.user-action-box {
 	
 .import-email-buttons { top: 2px; right: 0; }
 .import-email-buttons .btn .connected { display: none; }
-.import-email-buttons .btn.connected { background: #555 !important; box-shadow: none !important;}
+.import-email-buttons .btn.connected { 
+	background: #555 !important; 
+	box-shadow: none !important; 
+	cursor: default !important; }
 .import-email-buttons .btn.connected .connected { display: inline-block; }
 .import-email-buttons .btn.connected span.unconnected { display: none; }
 
