--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -122,7 +122,7 @@
 
 
 <div class="feed-container">
-	<div id="feed" class="feed no-user relative">
+	<div id="feed" class="feed relative">
 
 	  <%unless @user.purchases_count.zero?%>
 	  <%else%>
