--- a/app/views/purchases/index.json.erb
+++ b/app/views/purchases/index.json.erb
@@ -3,7 +3,7 @@
     :locals => {:purchases => @purchases}%>
 <%-elsif @aspect == :search-%>
   <%=render :partial => "purchases/purchases",
-      :locals => {:purchases => @purchases,:extra => {:without_store => true,:without_interactions => true}}%>
+      :locals => {:purchases => @purchases,:extra => {:without_interactions => true}}%>
 <%-else-%>
 <%-cache @key,@cache_options do-%>
 <%=render :partial => "purchases/purchases",
