--- a/app/views/headers/_default.html.erb
+++ b/app/views/headers/_default.html.erb
@@ -97,22 +97,22 @@
     		<a href="<%=tw_auth_path(:src => @origin)%>" 
 	          onclick="this.className += ' load';"
 	          class="btn btn-twitter rounded-3-right relative shaded"
-	          style="float: right; width: 160px; border-left: 1px solid rgba(0,0,0,0.1);">
+	          style="float: right; width: 88px; border-left: 1px solid rgba(0,0,0,0.1);">
 	        <span class='hide-when-loading'>
 	          <%=image_tag "social/t-box.png",
 	              :class => "t-box"%>
-	          Sign in<span class="rwd-hide"> with Twitter</span>
+	          Sign in
 	        </span>
 	        <i class='icon-loading icon-white'></i>
 	      </a> 	
 	      <a href="<%=fb_auth_path(:src => @origin)%>" 
 	          onclick="this.className += ' load';"
 	          class="btn btn-facebook rounded-3-left relative shaded"
-	          style="float: right; width: 172px;">
+	          style="float: right; width: 88px;">
 	        <span class='hide-when-loading'>
 	          <%=image_tag "social/f-box.png",
 	              :class => "f-box"%>
-	          Sign in<span class="rwd-hide"> with Facebook</span>
+	          Sign in
 	        </span>
 	        <i class='icon-loading icon-white'></i>
 	      </a> 	
