--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -776,17 +776,29 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	filter: alpha(opacity=60); }
 
 .details-box { 
-	margin-top: 16px; 
+	margin-top: 14px; 
 	padding: 0 0 12px 60px;
 	min-height: 73px; /* in case of no store */
 	font-size: 14px;
 	line-height: 130%;
 	border-bottom: 6px solid #eaeaea; }
-.details-box .user-photo { width: 50px; height: 50px; top: 2px; left: 0; }
-.details-box .user-name  { font-size: 12px; font-weight: bold; }
-.details-box .time       { font-size: 10px; color: #999; padding-left: 3px; }
-.details-box .item-name  { font-size: 14px; color: #444; font-weight: bold; }
-.details-box .store-name { font-size: 12px; color: #999; }
+.details-box .user-photo,  
+.details-box .combo-count { 
+	width: 50px; 
+	height: 50px; 
+	font-size: 26px; 
+	line-height: 50px; 
+	top: 2px; 
+	left: 0;
+	font-weight: bold;
+	text-align: center;
+	color: #eee;
+	background: #666; }
+.details-box .combo-count { display: none; }
+.details-box .user-name   { font-size: 12px; font-weight: bold; }
+.details-box .time        { font-size: 10px; color: #999; padding-left: 3px; }
+.details-box .item-name   { font-size: 14px; color: #444; font-weight: bold; }
+.details-box .store-name  { font-size: 12px; color: #999; }
 
 .interactions-box { padding: 0 16px 16px; background: #f6f6f6; }
 .interactions-box input,
@@ -844,12 +856,17 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .medium .photo-box .item-photo { max-height: 250px; }
 .medium .actions .btn { width: 48px; }
 .medium .details-box { 
-	margin-top: 14px; 
+	margin-top: 12px; 
 	min-height: 65px; 
 	padding: 0 0 12px 50px; 
 	font-size: 12px; 
 	border-bottom: 6px solid #eee; }
-.medium .details-box .user-photo { width: 42px; height: 42px; top: 2px; left: 0; }
+.medium .details-box .user-photo,
+.medium .details-box .combo-count { 
+	width: 42px; 
+	height: 42px;
+	line-height: 42px;
+	font-size: 22px; }
 .medium .details-box .item-name  { font-size: 12px; }
 .medium .interactions-box { display: none; }
 
@@ -863,7 +880,7 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .small .photo-box .item-photo { max-height: 200px; }
 .small .actions .btn { width: 48px; }
 .small .details-box { 
-	margin-top: 14px; 
+	margin-top: 10px; 
 	padding: 0 0 12px 50px; 
 	font-size: 12px; 
 	border-bottom: 6px solid #eee; }
@@ -879,6 +896,12 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 .no-user .details-box .user-photo,
 .no-user .details-box .user-name,
 .no-user .details-box .time  { display: none; }
+
+
+/* Item (Combo)
+==================================================================== */
+.combo .details-box .user-photo  { display: none;  }
+.combo .details-box .combo-count { display: block; }
 
 
 /* Item (No Links)
@@ -1122,50 +1145,6 @@ input:-ms-input-placeholder      { color: #b7b7b7; }
 	background: white;
 	z-index: 2;
 	padding: 0 3.819444444444% 16px; }
-	
-.card { 
-	width: 50%;
-	display: inline-block;
-	vertical-align: top;
-	background: white; }
-	
-.card .photo-box {
-	width: auto;
-	height: 212px;
-	line-height: 212px;
-	padding: 12px 6px;
-	text-align: center; }
-	
-.card .photo-box .item-photo {
-	max-width: 100%;
-	max-height: 200px; }
-	
-.card .panel { padding: 0 6px 12px 6px; }
-
-.card .panel .panel-contents { 
-	background: #eee;
-	padding: 10px; }
-	
-.card .panel .panel-contents .caret {
-	width: 0;
-	height: 0;
-	left: 18px;
-	top: -10px;
-	vertical-align: bottom;
-	border-bottom: 10px solid #eee;
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
-	border-top: 0 solid transparent;
-	content: ""; }
-
-.card .panel .title-box { 
-	font-weight: bold; 
-	color: #555;
-	line-height: 140%; }
-
-.card .panel .title-box a.link-out { 
-	padding-right: 11px;
-	background: url('/images/arrow-out-177DBE-s.png') center right no-repeat; }	
 	
 	
 /* Unit-box
