--- a/app/views/headers/_default.html.erb
+++ b/app/views/headers/_default.html.erb
@@ -8,114 +8,122 @@
 	        root_path(:src => "bar")%>
     </div>
       
-      <%if logged_in?%>
+    <%if logged_in?%>
 
-        <%if !is_onboarding?%>
-        	<div class="unselectable well-box border-box rounded-5" 
-       				 style="float: right; padding: 6px; z-index: 10000;">
+      <%if !is_onboarding?%>
+      	<div class="unselectable well-box border-box rounded-5" 
+     				 style="float: right; padding: 6px; z-index: 10000;">
+      
+        <a href="<%=user_path(self.current_user.handle,:src => "bar")%>"
+          class="btn-user relative pointer txt m dark" 
+          style="float: left; width: 28px; padding: 0; border: 0; margin-right: 6px;">
+          <%=image_tag self.current_user.square_image_url,
+                :class => "user-photo m rounded-2",
+                :alt => self.current_user.full_name%>
+        </a>
+
+        <input type="text" placeholder="Search for people" class="m search h-medium border-box rounded-2" id="users_search_query" 
+          style="float: left;">
         
-          <a href="<%=user_path(self.current_user.handle,:src => "bar")%>"
-            class="btn-user relative pointer txt m dark" 
-            style="float: left; width: 28px; padding: 0; border: 0; margin-right: 6px;">
-            <%=image_tag self.current_user.square_image_url,
-                  :class => "user-photo m rounded-2",
-                  :alt => self.current_user.full_name%>
-          </a>
+        <%=link_to image_tag("icons/PNG-Icons/32px-white/Places-2-white.png",
+                    :style => "height: 14px;"),
+                root_path(:src => "bar-icon"),
+                :class => "rwd-hide border-box opacity-80-100", 
+                :style => "vertical-align: top; display: inline-block; 
+                            width: 28px; height: 28px; margin-left: 6px; 
+                            padding: 6px 7px 8px;"%>   
 
-          <input type="text" placeholder="Search for people" class="m search h-medium border-box rounded-2" id="users_search_query" 
-            style="float: left;">
-          
-<!--
-         	<a class="rwd-show border-box pointer opacity-80-100" 
-            style="width: 28px; height: 28px; margin: 0 6px; padding: 7px 7px 7px; float: left;">
-            <#=image_tag "icons/PNG-Icons/32px-white/Edition-25-white.png", 
-                :style => "height: 14px;"%>
-          </a>
--->
-          
-          <%=link_to image_tag("icons/PNG-Icons/32px-white/Places-2-white.png",
-                      :style => "height: 14px;"),
-                  root_path(:src => "bar-icon"),
-                  :class => "rwd-hide border-box opacity-80-100", 
-                  :style => "vertical-align: top; display: inline-block; 
-                              width: 28px; height: 28px; margin-left: 6px; 
-                              padding: 6px 7px 8px;"%>   
-
-          <%unless is_phone_device?%>
-	          <div id="notifications_box" 	
-              style="z-index: 3;" 
-              class="btn-group rwd-hide relative">
-		          <a class="btn btn-red rounded-2 dropdown-toggle 
-                        border-box pointer 
-                        <%=self.current_user.unread_notifications_count.zero? ? 
-                            "zero" : ""%>"
-		          	style=""
-		          	data-toggle="dropdown">
-		          		<%=self.current_user.unread_notifications_count%>
-		          </a>
-	          
-              <ul id="notifications" 
-                  class="dropdown-menu notifications rounded-5 border-box pull-right">
-              </ul>
-	          
-	          </div> <! --/notifications btn-group -->
-	        <%end%>
-
-          
-          <!-- nav -->
-          <div class="btn-group relative" style="z-index: 3;">
-	          <a class="rwd-hide dropdown-toggle border-box pointer" 
-	            style="width: 28px; height: 28px; padding: 11px 8px; float: left;" 
-	            data-toggle="dropdown">
-	            <b class="caret opaque"></b>  
+        <%unless is_phone_device?%>
+          <div id="notifications_box" 	
+            style="z-index: 3;" 
+            class="btn-group rwd-hide relative">
+	          <a class="btn btn-red rounded-2 dropdown-toggle 
+                      border-box pointer 
+                      <%=self.current_user.unread_notifications_count.zero? ? 
+                          "zero" : ""%>"
+	          	style=""
+	          	data-toggle="dropdown">
+	          		<%=self.current_user.unread_notifications_count%>
 	          </a>
-	      
-	
-	          <ul class="dropdown-menu nav pull-right rounded-3">
-	            <li class="txt s">
-	              <%=link_to "Your Mine",
-	                  user_path(self.current_user.handle,:src => "bar")%>
-	            </li>
-	            <li class="txt s">
-	              <%=link_to "Invite friends",new_invite_path(:src => "bar")%>
-	            </li>
-	            <li class="txt s">
-	              <%=link_to "Settings",settings_path(:src => "bar")%>
-	            </li>
-	            <li class="txt s">
-	              <%=link_to "Log Out",logout_path%>
-	            </li>
-	          </ul>
-	         </div> <! --/nav btn-group -->
           
-        </div>  <!--/well-box -->
-      <%end%>
+            <ul id="notifications" 
+                class="dropdown-menu notifications rounded-5 border-box pull-right">
+            </ul>
+          
+          </div> <! --/notifications btn-group -->
+        <%end%>
+
+        
+        <!-- nav -->
+        <div class="btn-group relative" style="z-index: 3;">
+          <a class="rwd-hide dropdown-toggle border-box pointer" 
+            style="width: 28px; height: 28px; padding: 11px 8px; float: left;" 
+            data-toggle="dropdown">
+            <b class="caret opaque"></b>  
+          </a>
+      
+
+          <ul class="dropdown-menu nav pull-right rounded-3">
+            <li class="txt s">
+              <%=link_to "Your Mine",
+                  user_path(self.current_user.handle,:src => "bar")%>
+            </li>
+            <li class="txt s">
+              <%=link_to "Invite friends",new_invite_path(:src => "bar")%>
+            </li>
+            <li class="txt s">
+              <%=link_to "Settings",settings_path(:src => "bar")%>
+            </li>
+            <li class="txt s">
+              <%=link_to "Log Out",logout_path%>
+            </li>
+          </ul>
+         </div> <! --/nav btn-group -->
+        
+      </div>  <!--/well-box -->
+    <%end%>
     
 
     <%else%>
+ 
     	<div class="well-box border-box rounded-5" style="float: right; padding: 7px; margin-top: -3px;">
-    		<a href="<%=tw_auth_path(:src => @origin)%>" 
-	          onclick="this.className += ' load';"
-	          class="btn btn-twitter rounded-3-right relative shaded"
-	          style="float: right; width: 88px; border-left: 1px solid rgba(0,0,0,0.1);">
-	        <span class='hide-when-loading'>
-	          <%=image_tag "social/t-box.png",
-	              :class => "t-box"%>
-	          Sign in
-	        </span>
-	        <i class='icon-loading icon-white'></i>
-	      </a> 	
-	      <a href="<%=fb_auth_path(:src => @origin)%>" 
-	          onclick="this.className += ' load';"
-	          class="btn btn-facebook rounded-3-left relative shaded"
-	          style="float: right; width: 88px;">
-	        <span class='hide-when-loading'>
-	          <%=image_tag "social/f-box.png",
-	              :class => "f-box"%>
-	          Sign in
-	        </span>
-	        <i class='icon-loading icon-white'></i>
-	      </a> 	
+    	
+	    	<%if is_device_iphone?%>
+	    	
+    			<a style="background-color: #FF6600; width: 128px;" 
+		        class="btn rounded-3 relative shaded" 
+						href="http://itunes.apple.com/us/app/mine./id567558757?mt=8" 
+		        onclick="mixpanel.track('Get the App Clicked');">
+					  Get the App
+					</a>	
+	      
+	      <%else%>
+	      
+	      	<a href="<%=tw_auth_path(:src => @origin)%>" 
+		          onclick="this.className += ' load';"
+		          class="btn btn-twitter rounded-3-right relative shaded"
+		          style="float: right; width: 88px; border-left: 1px solid rgba(0,0,0,0.1);">
+		        <span class='hide-when-loading'>
+		          <%=image_tag "social/t-box.png",
+		              :class => "t-box"%>
+		          Sign in
+		        </span>
+		        <i class='icon-loading icon-white'></i>
+		      </a> 	
+		      <a href="<%=fb_auth_path(:src => @origin)%>" 
+		          onclick="this.className += ' load';"
+		          class="btn btn-facebook rounded-3-left relative shaded"
+		          style="float: right; width: 88px;">
+		        <span class='hide-when-loading'>
+		          <%=image_tag "social/f-box.png",
+		              :class => "f-box"%>
+		          Sign in
+		        </span>
+		        <i class='icon-loading icon-white'></i>
+		      </a> 
+		     
+		    <%end%>
+	      
       </div> <!--/well-box-->
     <%end%>
     
