feed loader white

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -213,7 +213,7 @@
 	<div id="feed" class="feed relative">
 	</div> 
 
-	<div id="feed-spinner" class="feed-loading dark">
+	<div id="feed-spinner" class="feed-loading white rounded-8-bottom">
 	</div> 
 </div> <!-- feed container -->
 
