various color and lang tweaks

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -134,8 +134,8 @@
 	</div> 
 
   <%unless @user.purchases_count.zero?%>
-    <div id="feed-spinner" class="feed-loading dark">
-    </div> 
+		<div id="feed-spinner" class="feed-loading white rounded-8-bottom">
+		</div> 
   <%end%>
 </div> <!-- /feed-container -->
 
