--- a/app/views/purchases/_input.html.erb
+++ b/app/views/purchases/_input.html.erb
@@ -91,8 +91,9 @@
 			  <div class="review-box">
 	
 		      <div id="initiate_endorsement" 
-            class="btn btn-large add-review rounded-5">
-		        <i class="icon-pencil"></i> Why did you pick this item?
+            class="btn btn-large h-medium add-review rounded-5">
+		        <i class="icon-pencil" style="padding-right: 3px;"></i>
+		        What's the story with this item?
 		      </div>
 						
 		      <%=f.text_area :endorsement,
