move purchase modal outside display.jst

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
 		    <%=yield%>
 		   
 			</div> <!-- /container -->
+
+      <div id="relative_global">
+      </div>
 	  
 	  </div> <!-- /wrapper -->
 
