admin ui for purchase searches.

--- a/app/views/admin/help/show.html.erb
+++ b/app/views/admin/help/show.html.erb
@@ -40,6 +40,8 @@
               admin_searches_path(:filter => 'creation')%> <br>
   <%=link_to 'User',
               admin_searches_path(:filter => 'user')%> <br>
+  <%=link_to 'Purchase',
+              admin_searches_path(:filter => 'purchase')%> <br>
 
   <br> <h3>Stores</h3> 
   <%=link_to 'Unapproved',
