more list view shenanigans

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -212,8 +212,8 @@
     </div> <!-- /m-box-->
   <%end%>
 	
-	<div id="feed" class="feed relative">
-	</div> 
+	<ul id="feed" class="feed relative">
+	</ul> 
 
 	<div id="feed-spinner" class="feed-loading white rounded-8-bottom">
 	</div> 
