--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -725,9 +725,9 @@ a.feed-intro .highlight { font-weight: bold; }
 ==================================================================== */
 
 .m-box { height: 44px; background: white;} /* same as m-search */
-.m-wrapper { background: #eeeeee; /* box-shadow: 0 3px 0px rgba(0, 0, 0,0.15); */	z-index: 10000; }
+.m-wrapper { background: #eeeeee; /* box-shadow: 0 3px 0px rgba(0, 0, 0,0.15); */ }
 	
-.m-wrapper.affix{
+.m-wrapper.affix {
 	position: fixed !important;
 	opacity: 0.98;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
@@ -784,8 +784,6 @@ input:-moz-placeholder 					 { color: #999; }
 input::-moz-placeholder 	       { color: #999; }
 input:-ms-input-placeholder      { color: #999; }
 
-.m-search.affix { top: 0; left: 0; width: auto; }
-
 
 /* Item (Default - Large)
 ==================================================================== */
@@ -796,7 +794,7 @@ input:-ms-input-placeholder      { color: #999; }
 	vertical-align: top;
 	background: white; }
 
-.photo-box { text-align: center; min-height: 100px; }
+.photo-box { text-align: center; min-height: 100px; background: white; }
 .photo-box .item-photo { max-height: 360px; }
 
 .actions { line-height: 0; }
@@ -881,7 +879,7 @@ input:-ms-input-placeholder      { color: #999; }
 	line-height: 1;
 	font-weight: bold;
 	margin-bottom: 3px; }
-	
+
 .add-comment-box input { padding-left: 35px !important; border: none; }
 
 
@@ -912,25 +910,24 @@ input:-ms-input-placeholder      { color: #999; }
 /* Item (Slab)
 ==================================================================== */
 
-.item.slab,
-.slab .item { width: auto; display: block; padding: 0; }
-.slab .photo-box { 	display: inline-block; width: 128px; height: 128px; line-height: 128px; }
-.slab .photo-box .item-photo { max-height: 128px; }
+.item.slab, .slab .item { width: auto; display: block; height: 188px; padding: 0; }
+.slab li:nth-child(odd), li.slab:nth-child(even) { background: #f9f9f9; }
+.slab .photo-box { 	float: left; width: 188px; height: 188px; line-height: 188px; }
+.slab .photo-box .item-photo { max-height: 188px; }
 .slab .actions .btn { width: 48px; }
 .slab .details-box { 
-	display: inline-block; 
-	margin-top: 12px; 
-	min-height: 65px; 
-	padding: 0 0 12px 50px; 
-	font-size: 12px; 
-	border-bottom: 6px solid #eee; }
+	float: left;
+	width: 387px;
+/* 	height: 188px; */
+	margin-top: 0; 
+	min-height: none; 
+	padding: 12px 16px; 
+	font-size: 16px; 
+	line-height: 130%;
+	border-bottom: none; }
 .slab .details-box .user-photo,
-.slab .details-box .combo-count { 
-	width: 42px; 
-	height: 42px;
-	line-height: 42px;
-	font-size: 22px; }
-.slab .details-box .item-name  { font-size: 12px; }
+.slab .details-box .combo-count { display: none; }
+.slab .details-box .item-name  { font-size: 20px; }
 .slab .interactions-box { display: none; }
 
 
@@ -1002,8 +999,8 @@ input:-ms-input-placeholder      { color: #999; }
 	filter: alpha(opacity=80); }
 	
 .modal-backdrop, .modal-backdrop.fade.in {
-	opacity: 0.8;
-	filter: alpha(opacity=80); }
+	opacity: 0.9;
+	filter: alpha(opacity=90); }
 	
 	
 /* Importer Item Review
