--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -100,7 +100,6 @@
 
 
 <%if is_phone_device?%>
-<!--
 	<div id="notifications_box" style="display:none">
 	  <div class="box-title" style="margin-top: -6px;">
 	    Notifications
@@ -111,7 +110,6 @@
 	    </ul>
 	  </div> 
 	</div>
--->
 <%end%> 
 
 
@@ -214,8 +212,8 @@
     </div> <!-- /m-box-->
   <%end%>
 	
-	<ul id="feed" class="feed relative">
-	</ul> 
+	<div id="feed" class="feed relative">
+	</div> 
 
 	<div id="feed-spinner" class="feed-loading white rounded-8-bottom">
 	</div> 
