--- a/app/views/users/_box.html.erb
+++ b/app/views/users/_box.html.erb
@@ -12,7 +12,7 @@
         <%if user.email_authorized?%>
           <a href="#" 
             rel="tooltip" 
-            title="Email Connected"
+            title="Connected to Mine e-receipt importer"
             data-placement="right"
             class="absolute opacity-80-100"
             style="padding-left: 2px;">
